# smt-select

./: .gitignore  README.md  finetune_lora.py  pwc.py  pyproject.toml  smt_dedup_cluster.py
data/: qfnia_features_filtered.csv  qfnia_test.csv  qfnia_train.csv
doc/: desc_agent_dev_note.md  experiment0103.md  experiment_log.md  path_embedding_results.md
logs/: diagnose_BV_55983666.out
scripts/: benchmarks_by_logic.py  build_gin_pwc_fallback.py  build_logic_info_csv.py  build_sibyl_test_eval.py  cross_validate.py  cross_validate_fusion.py  desc_gen_logic.py  diagnose_predict_vs_proba.py  download_smtlib.sh  encode_all_logic_desc.py  encode_all_paths.py  encode_desc_logics.py  evaluate_gin.py  evaluate_multi_splits.py  evaluate_multi_splits_fusion.py  evaluate_multi_splits_fusion_e2e.py  evaluate_multi_splits_gin.py  evaluate_multi_splits_gin_ehm.py  evaluate_multi_splits_wl.py  experiment_fusion.py  experiment_graph.py  experiment_svms.py  extract_catalog.py  extract_gin_embeddings.py  extract_gin_embeddings_by_logic.py  extract_syntactic_csv.py  finetune_desc_setfit.py  k_fold.py  process_raw_results.py  run_all_cv.py  run_syntactic_splits.py  run_wl_iter_sweep.py  split_data.py  split_data_json.py  summarize_cv_results.py  train_evaluate.py  train_evaluate_fusion.py  train_gin_ehm.py  train_gin_pwc.py  train_setfit_splits.py
src/: __init__.py  defaults.py  desc_encoder.py  desc_gen_llm.py  evaluate.py  evaluate_gin.py  fallback_merge.py  feature.py  finetune_pairwise.py  fusion_e2e_pwc.py  fusion_pwc.py  gin_ehm.py  gin_model.py  gin_pwc.py  graph_rep.py  parser.py  (+16 more)
(+4312 files in other folders)
