[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smt-as-llm"
version = "0.1.0"
description = "SMT Algorithm Selection using LLM"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
    "joblib>=1.0.0",
    "setfit>=1.0.3",
    "datasets>=2.0.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.0.0",
    "transformers<5",
    "openai>=1.0.0",
    "tqdm>=4.66.0",
    "z3-solver>=4.12.0",
    # John's fork
    "grakel @ git+https://github.com/JohnLyu2/GraKeL.git@f142b6e394700301cebb420e06db91a019f88aba",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=22.0.0", "flake8>=4.0.0"]
openai = ["openai>=1.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
